--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,12 @@ languageCode = "en-us"
 title = "Test"
 theme = "ananke"
 
-MetaDataFormat = "yaml"
+markup = "markdown"
+
+#MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
+
 Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
