--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://relaxed-bhaskara-b9115b.netlify.com/"
+baseURL = "https://ck-test.netlify.com/"
 languageCode = "en-us"
 title = "Test"
 theme = "ananke"
